# The-Sizzled-Munch

./: .vercelignore  BUG_FIXES_SUMMARY.md  CNAME  PRODUCTION_FIXES.md  README.md  SIGNIN_ANALYSIS.md  SIGNIN_FIX_SUMMARY.md  app.py  asset-manifest.json  enhanced_seed.py  index.html  log_analysis_report.md  models.py  production_fix.py  requirements.txt  serializer.py
Back_end/Back_end/: app.py  models.py  pyproject.toml
Back_end/Back_end/Back_end/: seed.py
Back_end/Back_end/Back_end/Back_end/Back_end/: serializer.py
Back_end/Back_end/Back_end/Back_end/migrations/versions/: 083b249bcb86_add_admin_model.py  1f08a5ebcee5_added_delivery_address_and_phone_number_.py  359dadcf5575_create_menu_items_table.py  60c622785263_add_verification_code_and_sent_at_to_.py  91a32c042d1b_rename_table_user_to_users.py  95679c537cbb_rename_table_user_to_users.py  9ec636dc07dc_add_received_field_to_orders.py  (+3 more)
Back_end/Back_end/Back_end/migrations/versions/: 7083ba86c880_update_signup.py  820fd9c0356c_add_verification_code_to_user.py  fe5baff9cc50_increase_password_hash_length.py
Back_end/Back_end/Back_end/thesizzledmunch/: package-lock.json
Back_end/Back_end/migrations/versions/: 9b7b95861ee8_fix_created_at_default_on_orders.py
Back_end/Back_end/thesizzledmunch/src/: firebase.js
Back_end/Back_end/thesizzledmunch/src/components/: Navbar.css  Navbar.js
Back_end/Back_end/thesizzledmunch/src/pages/: AdminOrders.js  AuthForms.css  CartPage.css  CheckoutPage.css  ForgotPasswordPage.js  MenuManagement.css  MenuManagement.js  MyOrders.css  ResetPasswordPage.js  UserProfile.css
(+108 files in other folders)
