[project]
name = "sizzled-munch"
version = "0.1.0"
description = "Backend for The Sizzled Munch"
authors = [
    {name = "Joseph Kennedy",email = "joekentafir@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
